--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Hal Wine <hwine@mozilla.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 sphinx = "^3.2.1"
-recommonmark = "^0.6.0"
+myst-parser = "^0.12.10"
 
 [tool.poetry.dev-dependencies]
 
